--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.0.0",
     "stylelint": "13.13.1",
-    "stylelint-config-htmlacademy": "^0.1.11"
+    "stylelint-config-htmlacademy": "^0.1.11",
+    "autoprefixer": "10.3.7",
+    "browser-sync": "2.27.5",
+    "gulp": "4.0.2",
+    "gulp-less": "5.0.0",
+    "gulp-plumber": "1.2.1",
+    "gulp-postcss": "9.0.1",
+    "postcss": "8.3.9"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
@@ -22,4 +29,7 @@
     "node": "^16"
   },
   "type": "module"
+
+
+
 }
